# advent-of-code-2024

./: CMakeLists.txt  build.sh
day-1/: part1.cpp  part2.cpp
